    rather than defining its own command.  Done to track changes in the 8.0p1
    release.  The loadlibindex commands can no longer handle tclIndex files.
    (*POTENTIAL INCOMPATIBILITY*)     
  o Removed restriction on keyedlist key containing white spaces.  Keys really
    shouldn't,  but this check broke compatibility.
===============================================================================
11 Nov 97: Released TclX 8.0.1
===============================================================================
28 Nov 97:
  o Merge in new auto_load from Tcl 8.0p2.
  o Several minor fixes.
===============================================================================
29 Nov 97: Released TclX 8.0.2
===============================================================================
22 Jan 98: 
  o Added fixes for handling some corner cases in saving and restoring
    interp state on signals. Debugged and submitted by the ever-helpful
    <Viktor-Dukhovni@deshaw.com>.
-------------------------------------------------------------------------------
2 Feb 98:
  o Added --with-tcl dir and --with-tk configure options.  Contributed by
    <Viktor-Dukhovni@deshaw.com>.
-------------------------------------------------------------------------------
22 Jan 98: 
  o Added fixes for handling some corner cases in saving and restoring
    interp state on signals. Debugged and submitted by the ever-helpful
    <Viktor-Dukhovni@deshaw.com>.
-------------------------------------------------------------------------------
25 Apr 98:
  o Fixed bug with .tndx libraries and references to commands in namespaces.
-------------------------------------------------------------------------------
7 Aug 98:
  o Added -restart option to the signal command.
-------------------------------------------------------------------------------
8 Aug 98: Released TclX 8.0.3
===============================================================================