@@ -12,7 +12,7 @@
 # software for any purpose.  It is provided "as is" without express or
 # implied warranty.
 #------------------------------------------------------------------------------
-# $Id: lgets.test,v 8.3 1997/08/23 18:55:44 markd Exp $
+# $Id: lgets.test,v 8.4 1997/09/25 03:56:38 markd Exp $
 #------------------------------------------------------------------------------
 #
 
@@ -174,6 +174,7 @@ catch {close $fh}
 # FIX: Doesn't work right on Win32.
 if [cequal $tcl_platform(platform) windows] {
     echo "    * lgets tests not completely ported to Win32, some tests skipped"
+    TestRemove test1.tmp test2.tmp
     return
 }
 
