@@ -13,7 +13,7 @@
 # software for any purpose.  It is provided "as is" without express or
 # implied warranty.
 #------------------------------------------------------------------------------
-# $Id: tcllib.test,v 8.6 1997/10/06 04:48:17 markd Exp $
+# $Id: tcllib.test,v 8.7 1997/11/11 05:33:20 markd Exp $
 #------------------------------------------------------------------------------
 #
 
@@ -360,16 +360,10 @@ Test tcllib-9.3 {successful library access} {
     TclXLibTest::TclLibNSD
 } 0 {***TclXLibTest::TclLibNSC*** ***TclXLibTest::TclLibNSD***}
 
-#catch {file delete -force tcllib1.dir}
-#catch {file delete -force tcllib2.dir}
+TestRemove tcllib1.dir tcllib2.dir
 
-#rename TclLibCleanUp {}
-#rename PutFile {}
-#rename TclLibReset {}
+rename TclLibCleanUp {}
+rename PutFile {}
+rename TclLibReset {}
 
-#set auto_path $save_auto_path
-#rename unknown {}
-
-
-
-
+set auto_path $save_auto_path
