@@ -13,7 +13,7 @@
  * software for any purpose.  It is provided "as is" without express or
  * implied warranty.
  *-----------------------------------------------------------------------------
- * $Id: tclXunixTest.c,v 8.1 1997/04/17 04:59:51 markd Exp $
+ * $Id: tclXunixTest.c,v 8.2 1997/07/01 02:58:15 markd Exp $
  *-----------------------------------------------------------------------------
  */
 
@@ -31,7 +31,7 @@ Tclxtest_Init _ANSI_ARGS_((Tcl_Interp *interp));
  * Even if matherr is not used on this system, there is a dummy version
  * in libtcl.
  */
-EXTERN int matherr ();
+extern int matherr ();
 int (*tclDummyMathPtr)() = matherr;
 
 /*-----------------------------------------------------------------------------
