@@ -12,7 +12,7 @@
 # software for any purpose.  It is provided "as is" without express or
 # implied warranty.
 #------------------------------------------------------------------------------
-# $Id: $
+# $Id: common.vc,v 8.6.2.1 1998/08/10 09:26:40 markd Exp $
 #------------------------------------------------------------------------------
 #
 
@@ -41,6 +41,7 @@ TKX_VERSION  = 8.0.3
 # o ROOT- Absolute path to the top of source tree.
 # o TMP_DIR - Location where .obj files should be stored during build.
 #   This maybe absolute or relative to the win build directories.
+#   (In practice any value other than "." may not yet work!)
 # o TOOLS32 - Location of VC++ 32-bit development tools. Note that the
 #   VC++ 2.0 header files are broken, so you need to use the ones that
 #   come with the developer network CD's, or later versions of VC++.
@@ -49,14 +50,34 @@ TKX_VERSION  = 8.0.3
 
 ROOT     = ..\..
 TMP_DIR  = .
-TOOLS32	= c:\Program Files\DevStudio\Vc
+TOOLS32	= c:\Program Files\DevStudio\VC
 IDE32	= c:\Program Files\DevStudio\SharedIDE
 
 # Comment the following line to compile with symbols
-#NODEBUG=1
+NODEBUG=1
+ 
+!IF "$(NODEBUG)" == "1"
+cdebug = -Ox -Oy- -Gs -GD
+!ELSE
+cdebug = -Z7 -Od -WX
+!ENDIF
 
 # uncomment the following two lines to compile with TCL_MEM_DEBUG
 #DEBUGDEFINES   =-DTCL_MEM_DEBUG
+
+
+# Tcl/Tk build directories and library extensions depend on NODEBUG.
+!IF "$(NODEBUG)" == "1"
+TCL_TMP_DIR     = Release
+TK_TMP_DIR	= Release
+TCL_DBGX        =
+TK_DBGX         =
+!ELSE
+TCL_TMP_DIR     = Debug
+TK_TMP_DIR	= Debug
+TCL_DBGX        = d
+TK_DBGX         = d
+!ENDIF
 
 #
 # Tcl build directories and files.
@@ -64,11 +85,12 @@ IDE32	= c:\Program Files\DevStudio\SharedIDE
 TCL_DIR          = $(ROOT)\..\tcl8.0
 TCL_GENERIC_DIR  = $(TCL_DIR)\generic
 TCL_WIN_DIR      = $(TCL_DIR)\win
+TCL_BUILD_DIR    = $(TCL_WIN_DIR)\$(TCL_TMP_DIR)
 TCL_RUNTIME_DIR  = $(TCL_DIR)\library
 TCL_TESTS_DIR    = $(TCL_DIR)\tests
-TCL_LIB          = $(TCL_WIN_DIR)\Release\tcl80.lib
-TCL_DLL          = $(TCL_WIN_DIR)\Release\tcl80.dll
-TCL_SALIB        = $(TCL_WIN_DIR)\Release\tcl80sa.lib
+TCL_LIB          = $(TCL_BUILD_DIR)\tcl80$(TCL_DBGX).lib
+TCL_DLL          = $(TCL_BUILD_DIR)\tcl80$(TCL_DBGX).dll
+TCL_SALIB        = $(TCL_BUILD_DIR)\tcl80sa.lib
 
 #
 # TK build directories and files.
@@ -76,12 +98,13 @@ TCL_SALIB        = $(TCL_WIN_DIR)\Release\tcl80sa.lib
 TK_DIR           = $(ROOT)\..\tk8.0
 TK_GENERIC_DIR   = $(TK_DIR)\generic
 TK_WIN_DIR       = $(TK_DIR)\win
+TK_BUILD_DIR     = $(TK_WIN_DIR)\$(TK_TMP_DIR)
 TK_XLIB_DIR      = $(TK_DIR)\xlib
 TK_RUNTIME_DIR   = $(TK_DIR)\library
 TK_TESTS_DIR     = $(TK_DIR)\tests
-TK_LIB           = $(TK_WIN_DIR)\Release\tk80.lib
-TK_DLL           = $(TK_WIN_DIR)\Release\tk80.dll
-TK_SALIB         = $(TK_WIN_DIR)\Release\tk80sa.dll
+TK_LIB           = $(TK_BUILD_DIR)\tk80$(TK_DBGX).lib
+TK_DLL           = $(TK_BUILD_DIR)\tk80$(TK_DBGX).dll
+TK_SALIB         = $(TK_BUILD_DIR)\tk80sa.dll
 
 #
 # TclX directories.
@@ -89,9 +112,10 @@ TK_SALIB         = $(TK_WIN_DIR)\Release\tk80sa.dll
 TCLX_WIN_DIR      = $(ROOT)\tcl\win
 TCLX_GENERIC_DIR  = $(ROOT)\tcl\generic
 TCLX_RUNTIME_DIR  = $(ROOT)\tcl\runtime
+TCLX_DLL_NAME     = tclx803.dll
+TCLX_DLL          = $(TCLX_WIN_DIR)\$(TCLX_DLL_NAME)
 TCLX_LIB          = $(TCLX_WIN_DIR)\tclx803.lib
-TCLX_DLL          = $(TCLX_WIN_DIR)\tclx803.dll
-TCLX_SALIB        = $(TCLX_WIN_DIR)\tclx803s.lib
+TCLX_SALIB        = $(TCLX_WIN_DIR)\tclx803sa.lib
 TCLX_INST_BIN     = $(PREFIX)\bin
 TCLX_INST_INCL    = $(PREFIX)\include
 TCLX_INST_LIB     = $(PREFIX)\lib
@@ -105,8 +129,9 @@ TCLX_INST_RUNTIMEU= $(TCLX_INST_LIBU)/tclX$(TCLX_VERSION)
 TKX_WIN_DIR      = $(ROOT)\tk\win
 TKX_GENERIC_DIR  = $(ROOT)\tk\generic
 TKX_RUNTIME_DIR  = $(ROOT)\tk\runtime
+TKX_DLL_NAME     = tkx803.dll
+TKX_DLL          = $(TKX_WIN_DIR)\$(TKX_DLL_NAME)
 TKX_LIB          = $(TKX_WIN_DIR)\tkx803.lib
-TKX_DLL          = $(TKX_WIN_DIR)\tkx803.dll
 TKX_SALIB        = $(TKX_WIN_DIR)\tkx803sa.dll
 TKX_INST_BIN     = $(PREFIX)\bin
 TKX_INST_INCL    = $(PREFIX)\include
@@ -148,3 +173,7 @@ TARGETOS=BOTH
  
 # We need user32 in console mode for handling sockets.
 baselibs=$(baselibs) user32.lib
+
+# VC++ 5.0 complains if /MACHINE is not supplied.
+MACHINE = IX86
+lflags  = $(lflags) /MACHINE:$(MACHINE)
